// Copyright (c) 2020 TypeFox GmbH. All rights reserved.
// Licensed under the GNU Affero General Public License (AGPL).
// See License-AGPL.txt in the project root for license information.

syntax = "proto3";

package supervisor;

option go_package = "api";

// BackupService provides workspace-facing, backup related services
service BackupService {

    // Prepare prepares a workspace backup and is intended to be called by the PreStop
    // hook of the container. It should hardly ever be neccesary to call this from any
    // other point.
    rpc Prepare(PrepareBackupRequest) returns (PrepareBackupResponse) {}
    
}

message PrepareBackupRequest {}
message PrepareBackupResponse {}
